# oxidase

./: Cargo.toml  README.md  README.zh.md
src/: config.rs  http_server.rs  main.rs
src/cli/: mod.rs  tests.rs
src/config/: error.rs  http_method.rs  http_server.rs  http_version.rs  mod.rs  router.rs  service.rs  static.rs  tls.rs  url_scheme.rs
src/config/forward/: mod.rs  tls.rs
src/config/pattern/: compiler.rs  context.rs  error.rs  mod.rs  placeholder.rs  tests.rs
src/config/rewrite/: match.rs  mod.rs  op.rs
src/config/router/: mod.rs  op.rs
src/handler/: forward.rs  mod.rs  static.rs
src/handler/router/: ctx.rs  matcher.rs  mod.rs  ops.rs
src/parser/: mod.rs  router.rs  tests.rs
tests/fixtures/: servers_array.yaml  servers_wrapper.yaml  service_static.yaml  single_server.yaml
