[package]
name = "oxidase"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio", "client", "client-legacy", "http1"] }
bytes = "1"
http-body-util = "0.1"
percent-encoding = "2"
mime_guess = "2"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "1"
regex = "1.12.2"
clap = { version = "4", features = ["derive"] }
notify = "6.1.1"

